--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -13,8 +13,8 @@
   "about": {
     "info-title": "ABOUT ME",
     "info-description": "Hi, I'm Diego Andrés Giraldo T. (DevAndresGT), a Full Stack Developer specializing in cross-platform development. I'm passionate about creating innovative solutions that efficiently integrate software and hardware. I invite you to explore my technical profile, the projects I've worked on, my approach to software development, and how I stay up-to-date on the latest technological trends in the cross-platform ecosystem.",
-    "card-title": "",
-    "card-description": "",
-    "card-tag": ""
+    "card-description": "Full Stack Developer",
+    "card-tag": "HTML · CSS · SASS · GO · Dart · JS · TS · JAVA · KOTLIN · SWIFT · NODE",
+    "card-footer": "Web and Mobile Applications"
   }
 }
