--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -12,8 +12,9 @@
   "about": {
     "info-title": "SOBRE MI",
     "info-description": "Hola soy Diego Andrés Giraldo T. (DevAndresGT), Desarrollador FullStack especializado en desarrollo Multiplataforma. Me apasiona crear soluciones innovadoras yque integren software y hardware de manera eficiente. Te invito a conocer mi perfil tecnico, los proyectos en los que he trabajado, mi enfoque para el desarrollo de software y como me mantengo actualizado en las ultimas tendencias tecnologicas del ecosistema multiplataforma.",
-    "card-title": "",
-    "card-description": "",
-    "card-tag": ""
+
+    "card-description": "Full Stack Developer",
+    "card-tag": "HTML · CSS · SASS · GO · Dart · JS · TS · JAVA · KOTLIN · SWIFT · NODE",
+    "card-footer": "Aplicaciones Web y Móviles"
   }
 }
