--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -16,5 +16,8 @@
     "card-description": "Full Stack Developer",
     "card-tag": "HTML · CSS · SASS · GO · Dart · JS · TS · JAVA · KOTLIN · SWIFT · NODE",
     "card-footer": "Web and Mobile Applications"
+  },
+   "projects": {
+    "title": "PROJECTS"
   }
 }
